Twenty Fourteen: fill browser height to 100% for views with short content. Accounts for footer widgets, in which case the height isn't set to 100% so that the widgets remain visible. Props wycks and taupecat, fixes #25389.
Built from https://develop.svn.wordpress.org/trunk@25736


git-svn-id: http://core.svn.wordpress.org/trunk@25649 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -2517,8 +2517,12 @@ span > object {
 		float: left;
 		line-height: 1.6363636363;
 		margin: 0 0 0 -100%;
+		min-height: 100vh;
 		padding: 0 27px;
 		width: 128px;
+	}
+	body.footer-widgets #secondary {
+		min-height: 0;
 	}
 	.site-description {
 		display: block;
